# django-auth-service

./: .gitignore  LICENSE  README.md  manage.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
auth/: __init__.py  middleware.py  urls.py  views.py
auth/oauth2/: __init__.py  backends.py  exceptions.py  token.py
auth/oidc/: backends.py  client.py
auth/saml/: authorize.py  query_builder.py
auth_service/: asgi.py  settings.py.template  settings_common.py  urls.py  views.py  wsgi.py
authenticate/: __init__.py  middleware.py  urls.py  utils.py  views.py
authenticate/cookie/: __init__.py  exceptions.py  middleware.py
authenticate/oauth2/: backends.py  middleware.py  token.py
authenticate/oidc/: __init__.py  backends.py  client.py  middleware.py
authenticate/tests/: __init__.py  test_views.py
authorize/: __init__.py  middleware.py  views.py
authorize/opa/: __init__.py  exceptions.py  middleware.py
authorize/saml/: authorize.py  exceptions.py  middleware.py  query_builder.py
authorizer/: __init__.py  exceptions.py  urls.py  views.py
authorizer/oauth/: utils.py
authorizer/saml/: __init__.py  authorize.py  query_builder.py
authorizer_site/: __init__.py  asgi.py  settings_common.py  urls.py  wsgi.py
